add encoders tests

--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "1956c9e5",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "[30162 rows x 15 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "bb8f3772",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
        "[30162 rows x 13 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,14 +628,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "cf805a07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>education</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>capital-gain</th>\n",
+       "      <th>capital-loss</th>\n",
+       "      <th>hours-per-week</th>\n",
+       "      <th>native-country</th>\n",
+       "      <th>class</th>\n",
+       "      <th>race=Amer-Indian-Eskimo</th>\n",
+       "      <th>race=Asian-Pac-Islander</th>\n",
+       "      <th>race=Black</th>\n",
+       "      <th>race=Other</th>\n",
+       "      <th>race=White</th>\n",
+       "      <th>sex=Female</th>\n",
+       "      <th>sex=Male</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39</td>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>2174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Self-emp-not-inc</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Handlers-cleaners</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Cuba</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32556</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Assoc-acdm</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Tech-support</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32557</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32558</th>\n",
+       "      <td>58</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Widowed</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Unmarried</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32559</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32560</th>\n",
+       "      <td>52</td>\n",
+       "      <td>Self-emp-inc</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Wife</td>\n",
+       "      <td>15024</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>30162 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age         workclass   education      marital-status  \\\n",
+       "0       39         State-gov   Bachelors       Never-married   \n",
+       "1       50  Self-emp-not-inc   Bachelors  Married-civ-spouse   \n",
+       "2       38           Private     HS-grad            Divorced   \n",
+       "3       53           Private        11th  Married-civ-spouse   \n",
+       "4       28           Private   Bachelors  Married-civ-spouse   \n",
+       "...    ...               ...         ...                 ...   \n",
+       "32556   27           Private  Assoc-acdm  Married-civ-spouse   \n",
+       "32557   40           Private     HS-grad  Married-civ-spouse   \n",
+       "32558   58           Private     HS-grad             Widowed   \n",
+       "32559   22           Private     HS-grad       Never-married   \n",
+       "32560   52      Self-emp-inc     HS-grad  Married-civ-spouse   \n",
+       "\n",
+       "              occupation   relationship  capital-gain  capital-loss  \\\n",
+       "0           Adm-clerical  Not-in-family          2174             0   \n",
+       "1        Exec-managerial        Husband             0             0   \n",
+       "2      Handlers-cleaners  Not-in-family             0             0   \n",
+       "3      Handlers-cleaners        Husband             0             0   \n",
+       "4         Prof-specialty           Wife             0             0   \n",
+       "...                  ...            ...           ...           ...   \n",
+       "32556       Tech-support           Wife             0             0   \n",
+       "32557  Machine-op-inspct        Husband             0             0   \n",
+       "32558       Adm-clerical      Unmarried             0             0   \n",
+       "32559       Adm-clerical      Own-child             0             0   \n",
+       "32560    Exec-managerial           Wife         15024             0   \n",
+       "\n",
+       "       hours-per-week native-country  class  race=Amer-Indian-Eskimo  \\\n",
+       "0                  40  United-States  <=50K                        0   \n",
+       "1                  13  United-States  <=50K                        0   \n",
+       "2                  40  United-States  <=50K                        0   \n",
+       "3                  40  United-States  <=50K                        0   \n",
+       "4                  40           Cuba  <=50K                        0   \n",
+       "...               ...            ...    ...                      ...   \n",
+       "32556              38  United-States  <=50K                        0   \n",
+       "32557              40  United-States   >50K                        0   \n",
+       "32558              40  United-States  <=50K                        0   \n",
+       "32559              20  United-States  <=50K                        0   \n",
+       "32560              40  United-States   >50K                        0   \n",
+       "\n",
+       "       race=Asian-Pac-Islander  race=Black  race=Other  race=White  \\\n",
+       "0                            0           0           0           1   \n",
+       "1                            0           0           0           1   \n",
+       "2                            0           0           0           1   \n",
+       "3                            0           1           0           0   \n",
+       "4                            0           1           0           0   \n",
+       "...                        ...         ...         ...         ...   \n",
+       "32556                        0           0           0           1   \n",
+       "32557                        0           0           0           1   \n",
+       "32558                        0           0           0           1   \n",
+       "32559                        0           0           0           1   \n",
+       "32560                        0           0           0           1   \n",
+       "\n",
+       "       sex=Female  sex=Male  \n",
+       "0               0         1  \n",
+       "1               0         1  \n",
+       "2               0         1  \n",
+       "3               0         1  \n",
+       "4               1         0  \n",
+       "...           ...       ...  \n",
+       "32556           1         0  \n",
+       "32557           0         1  \n",
+       "32558           1         0  \n",
+       "32559           0         1  \n",
+       "32560           1         0  \n",
+       "\n",
+       "[30162 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from lore_sa.encoder_decoder import OneHotEnc,TargetEnc\n",
+    "encoder = OneHotEnc()\n",
+    "\n",
+    "dataset_encoded = encoder.encode(dataset,['race','sex'])\n",
+    "dataset_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c339ac89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "542916"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_encoded.size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5abfa47b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "542916"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.df.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c705b175",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lore_sa.encoder_decoder import OneHotEnc,MyTargetEnc\n",
-    "encoder = OneHotEnc()\n",
-    "\n",
     "encoder = MyTargetEnc()"
    ]
   },
