--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "id": "1956c9e5",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "[30162 rows x 15 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "id": "bb8f3772",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
        "[30162 rows x 13 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,6 +624,99 @@
    "source": [
     "dataset.df.drop(['fnlwgt', 'education-num'], inplace=True, axis=1)\n",
     "dataset.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "dbaa032a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'age': 1,\n",
+       "  'workclass': 'State-gov',\n",
+       "  'education': 'Bachelors',\n",
+       "  'marital-status': 'Never-married',\n",
+       "  'occupation': 'Adm-clerical',\n",
+       "  'relationship': 'Not-in-family',\n",
+       "  'race': 'White',\n",
+       "  'sex': 'Male',\n",
+       "  'capital-gain': -1,\n",
+       "  'capital-loss': 0,\n",
+       "  'hours-per-week': 0,\n",
+       "  'native-country': 'United-States',\n",
+       "  'class': '<=50K'},\n",
+       " {'age': -1,\n",
+       "  'workclass': 'Private',\n",
+       "  'education': 'Bachelors',\n",
+       "  'marital-status': 'Never-married',\n",
+       "  'occupation': 'Adm-clerical',\n",
+       "  'relationship': 'Not-in-family',\n",
+       "  'race': 'White',\n",
+       "  'sex': 'Male',\n",
+       "  'capital-gain': -2,\n",
+       "  'capital-loss': 0,\n",
+       "  'hours-per-week': 0,\n",
+       "  'native-country': 'United-States',\n",
+       "  'class': '<=50K'},\n",
+       " {'age': -1,\n",
+       "  'workclass': 'Local-gov',\n",
+       "  'education': 'Bachelors',\n",
+       "  'marital-status': 'Never-married',\n",
+       "  'occupation': 'Adm-clerical',\n",
+       "  'relationship': 'Not-in-family',\n",
+       "  'race': 'White',\n",
+       "  'sex': 'Male',\n",
+       "  'capital-gain': 1,\n",
+       "  'capital-loss': 3,\n",
+       "  'hours-per-week': 0,\n",
+       "  'native-country': 'United-States',\n",
+       "  'class': '<=50K'},\n",
+       " {'age': 0,\n",
+       "  'workclass': 'Private',\n",
+       "  'education': 'Bachelors',\n",
+       "  'marital-status': 'Never-married',\n",
+       "  'occupation': 'Adm-clerical',\n",
+       "  'relationship': 'Not-in-family',\n",
+       "  'race': 'White',\n",
+       "  'sex': 'Male',\n",
+       "  'capital-gain': 0,\n",
+       "  'capital-loss': 0,\n",
+       "  'hours-per-week': 0,\n",
+       "  'native-country': 'United-States',\n",
+       "  'class': '<=50K'},\n",
+       " {'age': 0,\n",
+       "  'workclass': 'State-gov',\n",
+       "  'education': 'Bachelors',\n",
+       "  'marital-status': 'Never-married',\n",
+       "  'occupation': 'Adm-clerical',\n",
+       "  'relationship': 'Not-in-family',\n",
+       "  'race': 'White',\n",
+       "  'sex': 'Male',\n",
+       "  'capital-gain': 2,\n",
+       "  'capital-loss': 0,\n",
+       "  'hours-per-week': 0,\n",
+       "  'native-country': 'United-States',\n",
+       "  'class': '<=50K'}]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# random generation\n",
+    "\n",
+    "x = dataset.df.iloc[0].to_dict()\n",
+    "\n",
+    "from lore_sa.neighgen.random import RandomGenerator\n",
+    "\n",
+    "gen = RandomGenerator()\n",
+    "\n",
+    "gen.generate(x,5, features_domain = {'workclass':list(dataset.df['workclass'].unique())})"
    ]
   },
   {
@@ -1046,7 +1139,9 @@
    "id": "1142cb2e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -1359,7 +1454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
