add logger over dataset

--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "437a64b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "dcb8e45a",
    "metadata": {},
    "outputs": [],
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "66c360ef",
    "metadata": {},
    "outputs": [],
@@ -49,10 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "id": "1956c9e5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:test/resources/adult.csv file imported\n",
+      "2023-06-27 09:57:31,359 root         INFO     test/resources/adult.csv file imported\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -338,7 +355,7 @@
        "[30162 rows x 15 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "bb8f3772",
    "metadata": {},
    "outputs": [
@@ -570,7 +587,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>30162 rows × 13 columns</p>\n",
+       "<p>32561 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -613,10 +630,10 @@
        "32559             0              20  United-States  <=50K  \n",
        "32560             0              40  United-States   >50K  \n",
        "\n",
-       "[30162 rows x 13 columns]"
+       "[32561 rows x 13 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,7 +1876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
