--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "437a64b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "dcb8e45a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "66c360ef",
    "metadata": {},
    "outputs": [],
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "1956c9e5",
    "metadata": {},
    "outputs": [
@@ -66,8 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:test/resources/adult.csv file imported\n",
-      "2023-06-27 09:57:31,359 root         INFO     test/resources/adult.csv file imported\n"
+      "2023-06-27 10:44:33,801 root         INFO     test/resources/adult.csv file imported\n"
      ]
     },
     {
@@ -355,7 +345,7 @@
        "[30162 rows x 15 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,6 +354,53 @@
     "dataset = Dataset.from_csv('test/resources/adult.csv')\n",
     "dataset.df.dropna(inplace = True)\n",
     "dataset.df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9b6fcf9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris()\n",
+    "\n",
+    "from lore_sa.surrogate import DecTree\n",
+    "dt = DecTree()\n",
+    "dt.train(iris.data, iris.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "29cff07c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt.get_model()"
    ]
   },
   {
