notebook tutorial updated

--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -37,6 +37,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "504054e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.descriptor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a974d87a",
    "metadata": {},
    "outputs": [],
@@ -72,6 +82,16 @@
     "    encoded.append(encoder.encode(x.values))\n",
     "    \n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec51eac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder.decode(encoded[0])"
    ]
   },
   {
@@ -231,6 +251,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x = encoded_df[features].iloc[10].values\n",
+    "\n",
+    "\n",
     "rule = surrogate.get_rule(x, neighbour, encoder)\n",
     "\n",
     "print (rule)"
@@ -243,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder, isinstance(encoder, TabularEnc)"
+    "encoder"
    ]
   },
   {
