--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -241,7 +241,7 @@
     "surrogate = DecisionTreeSurrogate()\n",
     "\n",
     "\n",
-    "surrogate.train(neighbour.df[features].values,neighbour.df['class'] )"
+    "surrogate.train(neighbour.df[features].values , neighbour.df['class'] )"
    ]
   },
   {
@@ -272,7 +272,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bbb88317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "features\n",
+    "neighbour.df[[c for c in features if c!='class'][0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bd10d2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crules, deltas = surrogate.get_counterfactual_rules(x=x, y = 'class', Y=features, neighborhood_dataset = neighbour, encdec = encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "609a808d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -294,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
