--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -388,7 +388,7 @@
        "   'median': 40.0,\n",
        "   'q1': 40.0,\n",
        "   'q3': 45.0}},\n",
-       " 'categoric': {'workclass': {'index': 1,\n",
+       " 'catgorical': {'workclass': {'index': 1,\n",
        "   'distinct_values': ['State-gov',\n",
        "    'Self-emp-not-inc',\n",
        "    'Private',\n",
@@ -641,7 +641,7 @@
     }
    ],
    "source": [
-    "dataset.descriptor['categoric'].keys()"
+    "dataset.descriptor['catgorical'].keys()"
    ]
   },
   {
@@ -727,7 +727,7 @@
        "   'median': 40.0,\n",
        "   'q1': 40.0,\n",
        "   'q3': 45.0}},\n",
-       " 'categoric': {'workclass': {'index': 1,\n",
+       " 'catgorical': {'workclass': {'index': 1,\n",
        "   'distinct_values': ['State-gov',\n",
        "    'Self-emp-not-inc',\n",
        "    'Private',\n",
