--- a/notebook_test.ipynb
+++ b/notebook_test.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "66c360ef",
    "metadata": {},
    "outputs": [
@@ -46,9 +46,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-15 11:14:57,134 numexpr.utils INFO     Note: NumExpr detected 16 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
-      "2023-11-15 11:14:57,134 numexpr.utils INFO     NumExpr defaulting to 8 threads.\n",
-      "2023-11-15 11:14:57,704 root         INFO     test/resources/adult.csv file imported\n"
+      "2024-01-29 18:17:56,296 numexpr.utils INFO     NumExpr defaulting to 8 threads.\n",
+      "2024-01-29 18:17:56,704 root         WARNING  No target class is defined\n",
+      "2024-01-29 18:17:57,014 root         INFO     test/resources/adult.csv file imported\n"
      ]
     },
     {
@@ -336,7 +336,7 @@
        "[30162 rows x 15 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "504054e3",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "dict_keys(['numeric', 'categorical', 'target'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,10 +381,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a974d87a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "TabularDataset.update_descriptor() missing 1 required positional argument: 'df'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m dataset\u001b[38;5;241m.\u001b[39mdf\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfnlwgt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124meducation-num\u001b[39m\u001b[38;5;124m'\u001b[39m], inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m dataset\u001b[38;5;241m.\u001b[39mupdate_descriptor()\n",
+      "\u001b[1;31mTypeError\u001b[0m: TabularDataset.update_descriptor() missing 1 required positional argument: 'df'"
+     ]
+    }
+   ],
    "source": [
     "dataset.df.drop(['fnlwgt', 'education-num'], inplace=True, axis=1)\n",
     "dataset.update_descriptor()"
@@ -1862,7 +1874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
