--- a/LORE_Tutorial.ipynb
+++ b/LORE_Tutorial.ipynb
@@ -46,7 +46,7 @@
     }
    },
    "source": [
-    "from src.lore_sa.dataset import TabularDataset\n",
+    "from lore_sa.dataset import TabularDataset\n",
     "\n",
     "dataset = TabularDataset.from_csv('test/resources/adult.csv', class_name = \"class\")\n",
     "dataset.df.dropna(inplace = True)\n",
@@ -442,7 +442,7 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from src.lore_sa.bbox import sklearn_classifier_bbox\n",
+    "from lore_sa.bbox import sklearn_classifier_bbox\n",
     "\n",
     "\n",
     "def train_model(dataset: TabularDataset):\n",
@@ -576,7 +576,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from src.lore_sa.encoder_decoder import ColumnTransformerEnc\n",
+    "from lore_sa.encoder_decoder import ColumnTransformerEnc\n",
     "\n",
     "tabular_enc = ColumnTransformerEnc(dataset.descriptor)\n",
     "ref_value = dataset.df.iloc[0].values[:-1]\n",
@@ -623,7 +623,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from src.lore_sa.neighgen import RandomGenerator\n",
+    "from lore_sa.neighgen import RandomGenerator\n",
     "\n",
     "num_row = 10\n",
     "x = dataset.df.iloc[num_row][:-1]\n",
@@ -680,7 +680,7 @@
     }
    },
    "source": [
-    "from src.lore_sa.surrogate import DecisionTreeSurrogate\n",
+    "from lore_sa.surrogate import DecisionTreeSurrogate\n",
     "# decode the neighborhood to be labeled by the blackbox model\n",
     "neighb_train_X = tabular_enc.decode(neighbour)\n",
     "neighb_train_y = bbox.predict(neighb_train_X)\n",
